# soundcloud-api

./: .env.example  .ghci  .gitignore  .scheme.yml  CHANGELOG.md  Makefile  project.nix  release.nix  soundcloud-api.cabal
nix/: co-log-0.2.0.nix  dotenv-0.8.0.0.nix  typerep-map-0.3.2.nix
server/: Main.hs
src/: Prelude.hs  SoundCloud.hs
src/SoundCloud/: App.hs  Config.hs  Core.hs  Db.hs  Server.hs
src/SoundCloud/App/: Env.hs  Monad.hs
src/SoundCloud/Core/: Jwt.hs  Session.hs  User.hs
src/SoundCloud/Server/: Auth.hs
src/System/Environment/: Extra.hs
test/SoundCloud/: DummyTest.hs
