cabal-version:       2.4
name:                soundcloud-api
version:             0.0.0.0
synopsis:            SoundCloud toy clone API
description:         A very basic implementation for a SoundCloud clone
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
category:            Web
copyright:           2019 Vasiliy Yorkin
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/vyorkin/soundcloud-api.git

common core
  build-depends:       base
                     , relude ^>= 0.5
                     , base-unicode-symbols ^>= 0.2
                     , text ^>= 1.2
                     , bytestring ^>= 0.10
                     , containers ^>= 0.6
                     , unordered-containers ^>= 0.2
                     , mtl ^>= 2.2
                     , natural-transformation ^>= 0.4
                     , case-insensitive ^>= 1.2
                     , time ^>= 1.8
                     , lens ^>= 4.17
                     , random ^>= 1.1
                     , co-log ^>= 0.2
                     , postgresql-simple ^>= 0.6
                     , postgresql-simple-migration ^>= 0.1
                     , resource-pool ^>= 0.2
                     , aeson ^>= 1.4
                     , http-api-data >= 0.4
                     , http-types >= 0.12
                     , servant ^>= 0.16
                     , servant-server ^>= 0.16
                     , jwt ^>= 0.10
                     , optparse-applicative ^>= 0.14
                     , warp ^>= 3.2
                     , ekg-core ^>= 0.1
                     , ekg ^>= 0.4
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

common lib
  import:              core
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

common exe
  import:              core
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       soundcloud-api
                     -- we're using the older time package because:
                     -- optparse-applicative -> process -> unix -> time (>=1.2 && <1.9)
                     , time ^>= 1.8 && < 1.9
                     , optparse-applicative ^>= 0.14
                     , directory ^>= 1.3
                     , dotenv ^>= 0.8
library
  import:              core
  hs-source-dirs:      src
  mixins:              base hiding (Prelude)
  exposed-modules:     Prelude
                     , SoundCloud
                     , SoundCloud.App
                     , SoundCloud.App.Env
                     , SoundCloud.App.Monad
                     , SoundCloud.Config
                     , SoundCloud.Core
                     , SoundCloud.Core.User
                     , SoundCloud.Core.Session
                     , SoundCloud.Core.Jwt
                     , SoundCloud.Db
                     , SoundCloud.Server
                     , SoundCloud.Server.Auth
                     , System.Environment.Extra

executable soundcloud-server
  import:              exe
  mixins:              base hiding (Prelude)
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       soundcloud-api


test-suite soundcloud-test
  import:              core
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -- delegate test discovery to tasty
                       -fno-warn-missing-export-lists
  type:                exitcode-stdio-1.0
  mixins:              base hiding (Prelude)
  build-depends:       soundcloud-api
                     , tasty ^>= 1.2
                     , tasty-expected-failure ^>= 0.11
                     , hedgehog ^>= 0.6
                     , tasty-hedgehog ^>= 0.2
                     , eventful-test-helpers ^>= 0.2
                     , doctest ^>= 0.16
  build-tool-depends:  tasty-discover:tasty-discover == 4.*
  other-modules:       SoundCloud.DummyTest
  hs-source-dirs:      test
  main-is:             Driver.hs
